# rechner-pipeline

./: .gitignore  2026_04_29_status.md  CONTRIBUTING.md  LICENSE  Promt_excel_to_py.txt  README.md  Tarifrechner_KLV.xlsm  agentic_pipeline.py  excel_exporter.py  matrix_extractor.py  pipeline.py  pipeline_core.py  pyproject.toml  requirements.txt
examples/: README.md  Tarifrechner_Pipeline.pptx
prompts/: README.md
prompts/v1/: test_advanced.txt
setup/: anleitung.md  api-key-konzept.md  set-env-acl.ps1  setup.bat  setupdav.ps1
src/rechner_pipeline/: __init__.py  cli.py
src/rechner_pipeline/context/: __init__.py  prompt_builder.py
src/rechner_pipeline/extract/: __init__.py  excel.py  scalar_table.py
src/rechner_pipeline/generate/: __init__.py  client.py  output.py
src/rechner_pipeline/models/: __init__.py  manifest.py
src/rechner_pipeline/orchestrate/: __init__.py  agentic.py  dossier.py  runner.py
src/rechner_pipeline/qa/: __init__.py  security.py
tests/: test_agentic_diagnostics.py  test_cli_help.py  test_client_env.py  test_excel_helpers.py  test_generate_output.py  test_manifest_metadata.py  test_prompt_builder.py  test_run_dossier.py  test_runner_compare.py  test_static_security.py
