[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rechner-pipeline"
version = "0.1.0"
description = "Methodischer Referenzrahmen für KI-gestützte Rechenkernentwicklung (Excel → Python via LLM, agentisch orchestriert)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Bartlomiej Maciaga" },
    { name = "Arno Rasch" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = []

[project.optional-dependencies]
llm = [
    "openai>=1.68,<2",
]
export = [
    "pandas>=2.2,<3",
    "pywin32>=306,<400; sys_platform == 'win32'",
]
agentic = [
    "langgraph>=0.2,<2",
]
dev = [
    "pytest>=8.0,<9",
]
all = [
    "openai>=1.68,<2",
    "pandas>=2.2,<3",
    "pywin32>=306,<400; sys_platform == 'win32'",
    "langgraph>=0.2,<2",
]

[project.scripts]
rechner-pipeline = "rechner_pipeline.cli:main"
rechner-pipeline-agentic = "rechner_pipeline.cli:agentic_main"

[project.urls]
Homepage = "https://github.com/bartlmac/rechner-pipeline"
Issues = "https://github.com/bartlmac/rechner-pipeline/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
